Issue 43: fail to parse/dump special float numbers which are not supported by the JSON schema